# Personalising-Crutches

./: .gitignore  Personalising_crutches.ipynb  README.md  ble_MCU.py  ble_MCU_websocket.py  crutch_optim.py  crutches_visualization copy.html  dot_env.txt  luke.py  lukedatavisualization.py  pyproject.toml  recorded_data.csv  test_metabolic_fitting.py
2025.06.18/: 20250618_LukeChung_COSMED_metabolics.json  Luke_test2.parquet  luke_trials.csv  steps_ground_truth_LukeTest.csv  test2.parquet  test2_steps.csv
DataAnalysis/: Analysis.ipynb  EMGIMUsync.m  EMGProcessing.m  IMU.ipynb  OpenCapProcessing.m  emg_IMU_sync.py  metabolic_analysis.py  plot_compressed.py
V1/: lukedatavisualization.py  lukesimplelossBO.py  test_db.py  test_metabolic_fitting.py
V2/: env.example  experiments.db  pyproject.toml  run.sh  steps_data_export.csv
V2/app/: main.py
V2/app/api/: __init__.py  data.py  experiments.py  optimization.py
V2/app/core/: config.py
V2/app/core/algorithms/: __init__.py  gait_analysis.py  step_detection.py
V2/app/core/models/: __init__.py  data_upload.py  geometry.py  participant.py  trial.py
V2/app/core/optimization/: loss_functions.py
V2/app/core/services/: __init__.py  data_processing_service.py  experiment_service.py  survey_service.py
V2/app/core/utils/: __init__.py  opencap_utils.py
V2/database/: __init__.py  connection.py  models.py
V2/docs/: DBEAVER_CONNECTION.md  MIGRATION_GUIDE.md  OPENCAP_INTEGRATION.md  OPENCAP_QUICKSTART.md  POSTGRESQL_SETUP.md  QUICKSTART_POSTGRES.md  QUICK_START.md  SHARED_DATABASE_SETUP.md  V2_ARCHITECTURE.md
V2/frontend/: index.html
V2/frontend/js/: api.js  app.js  device-manager.js  main.js  systematic-mode.js  ui-components.js
V2/frontend/js/systematic-mode/: core.js  data-processor.js  geometry-sequencer.js  step-manager.js  survey-manager.js  trial-runner.js  ui-renderer.js
V2/research/: monitor_optimization.py  performance_monitor.py  test_jax_parallelization.py  watch_progress.py
V2/research/hole_optimization/: DESIGN_DECISIONS.md  __init__.py  benchmarking.py  config.py  geometry.py  gpu_config.py  logging_system.py  main.py  requirements.txt  visualization.py
V2/research/hole_optimization/configs/: default_differentiable.yaml
V2/research/hole_optimization/examples/: basic_usage.py  comprehensive_demo.py
V2/research/hole_optimization/hydra_configs/: benchmark.yaml  config.yaml
V2/research/hole_optimization/hydra_configs/experiment/: hyperparameter_sweep.yaml
V2/research/hole_optimization/hydra_configs/optimizer/: differentiable.yaml  genetic_algorithm.yaml
V2/research/hole_optimization/optimizers/: __init__.py  base.py  differentiable.py  differentiable_bloated.py  factory.py  genetic.py  hybrid.py  integer_programming.py  simulated_annealing.py
V2/research/hole_optimization/scripts/: setup_gpu_cluster.sh  yaml_cli.py
V2/research/hole_optimization/tests/: __init__.py  test_improvements.py
V2/research/logs/differentiable_1758232044/: forward_pass_iter_000000.json  params_iter_000000.npy
V2/research/notebooks/: hardware_search.ipynb  optimise_holes.py
V2/research/outputs/2025-09-17/22-11-48/.hydra/: config.yaml  hydra.yaml
V2/research/outputs/2025-09-17/22-12-17/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-12-49/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-14-04/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-14-39/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-15-28/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-17-59/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-19-10/.hydra/: config.yaml  hydra.yaml
V2/research/outputs/2025-09-17/22-27-22/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-29-15/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-30-15/.hydra/: config.yaml  hydra.yaml
V2/research/outputs/2025-09-17/22-31-07/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-32-04/.hydra/: hydra.yaml
V2/research/outputs/2025-09-17/22-32-17/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-29-04/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-29-46/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-30-03/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-30-36/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-31-02/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-31-26/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-32-04/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-34-13/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-35-15/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-35-53/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-36-28/.hydra/: config.yaml  hydra.yaml
V2/research/outputs/2025-09-18/17-36-47/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-39-24/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-43-28/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-43-37/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-45-17/.hydra/: hydra.yaml
V2/research/outputs/2025-09-18/17-47-24/.hydra/: hydra.yaml
V2/scripts/: add_study_geometries.py  fix_sequences.py  imu_trial_analysis.py  migrate_add_geometry_name.py  migrate_laps_to_float.py  setup_database.py  setup_postgres.py  setup_shared_database.py  start_server.py  steps_data_analysis.ipynb  test_real_data_upload.py
V2/tests/: test_api.py
luke_instability_experiments/: Alex1_data_steps.csv  Alex2_data_metrics.csv  Alex3_data.csv  Alex3_data_metrics.csv  Alex_rankings.csv  Charlie1_data_metrics.csv  Charlie2_data.csv  Charlie2_data_metrics.csv  Charlie2_data_steps.csv  Charlie3_data.csv  Charlie3_data_metrics.csv  Hassan2_data.csv  Hassan2_data_metrics.csv  Hassan3_data.csv  InstabilityBO.py  Joelle1_data.csv  Joelle1_data_steps.csv  Joelle2_data.csv  Joelle2_data_steps.csv  Joelle3_data_steps.csv  Joelle_rankings.csv  (+18 more)
(+193 files in other folders)
